[gd_scene load_steps=4 format=3 uid="uid://main_menu_001"]

[ext_resource type="Script" path="res://src/ui/main_menu.gd" id="1_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.8, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 1, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.05, 1)

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -190.0
offset_right = 180.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.9, 1, 1)
theme_override_font_sizes/font_size = 64
text = "NEON SURVIVOR"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Survive the neon onslaught"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.2, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "START GAME"

[node name="SettingsButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "QUIT"

[node name="UpdatePanel" type="PanelContainer" parent="Panel/VBox"]
visible = false
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="UpdateVBox" type="VBoxContainer" parent="Panel/VBox/UpdatePanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UpdateLabel" type="Label" parent="Panel/VBox/UpdatePanel/UpdateVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Update available"
horizontal_alignment = 1

[node name="UpdateHBox" type="HBoxContainer" parent="Panel/VBox/UpdatePanel/UpdateVBox"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="UpdateButton" type="Button" parent="Panel/VBox/UpdatePanel/UpdateVBox/UpdateHBox"]
custom_minimum_size = Vector2(220, 42)
layout_mode = 2
text = "DOWNLOAD & RESTART"

[node name="UpdateProgress" type="Label" parent="Panel/VBox/UpdatePanel/UpdateVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Version: 0.0.0"
horizontal_alignment = 1
